src/main/metadata-excluded/objects/Iteration__c.object
<CustomObject>
    <description>PMO: Manage Iteration Plans.</description>
    <fields>
        <fullName>Develop_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>relate to DT</description>
        <label>Develop Task</label>
        <referenceTo>Develop_Task__c</referenceTo>
        <relationshipLabel>Iterations</relationshipLabel>
        <relationshipName>Iterations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Not_use__c</fullName>
        <label>Phase_Not use</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Iterations</relationshipLabel>
        <relationshipName>Iterations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit-Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Iteration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phase__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Iteration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iterations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>